# adversa_agentic_ai

./: .gitignore  .gitmodules  README.md  config.yaml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.sh  template.yaml
docs/: A3_Project_Slides.pptx  Adversarial Agentic AI Architecture research.docx  aaa_literature_survey.docx  aaa_proposal.docx
sims/healthcare/: er_sim.py
src/: config.yaml  main.py  requirements.txt  run_all_tests.sh
src/adversa_agentic_ai/: main.py
src/adversa_agentic_ai/api/: api_server.py  config_api.py
src/adversa_agentic_ai/config/: config.yaml  config_manager.py
src/adversa_agentic_ai/docs/: llm_credentials_template.yaml
src/adversa_agentic_ai/mcp/: mcp_message.py
src/adversa_agentic_ai/models/: model_interface.py
src/adversa_agentic_ai/providers/: llm_factory.py
src/adversa_agentic_ai/schemas/: llm.py
src/adversa_agentic_ai/utils/: config_logger.py  fsutils.py
src/agents/base/: agent_interface.py  llm_agent_base.py  llm_base_agent.py
src/agents/orchestrator/: orchestrator_main.py  orchestrator_main_v2.py
src/agents/red/: simple_red_agent.py  simple_red_agent_main.py
src/agents/tests/: anthropic_llm_agent_test.py  list_bedrock_llms.py  red_agent_test_driver.py
src/api/: api_server.py  config_api.py
src/api/routers/: prompt_templates.py  providers.py  sim.py  sim_models.py
src/api/schemas/: providers.py  sim_models.py
src/api/stores/: agent_store.py  file_store.py  prompt_template_store.py  provider_store.py  sim.py  sim_model_store.py  (+1 more)
src/config/: config_manager.py
src/docs/: A3_Agentic_AI_Arch.docx  A3_Agentic_AI_Summary_Refreshed.docx  A3_Project_Slides.pptx  aaa_competitive_analysis.docx  cx.txt  gpg-signing-key.txt
src/mcp/: mcp_message.py
src/models/: model_manager.py
src/providers/: llm_factory.py
src/utils/: config_logger.py  fsutils.py
(+45 files in other folders)
