[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adversarial_agentic_ai"
version = "0.1.0"
description = "An AI-based Adversarial Red/Blue teaming system to protect a domain and ensure compliance."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{ name = "Pals Chinnakannan", email = "palsc@berkeley.edu" }]
dependencies = [
    "boto3>=1.34",
    "rich",
    "openai",         
    "typing-extensions",
    "fastapi>=0.110.0",
    "pydantic>=2.6",
    "uvicorn>=0.29", 
    "langchain-core>=0.1.50",
    "pydantic>=2.6",
    "uuid",
]

[project.optional-dependencies]
dev = ["black", "pre-commit"]
test = ["pytest", "coverage"]
docs = ["sphinx", "mkdocs"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
