[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "adversa_agentic_ai"
version = "0.1.0"
description = "This project provides a platform to model a domain capturing the elements of the domain entities as truthfully as possible and using that environment to achieve strong security posture using RED and BLUE AI Agents."
readme = "README.md"
license = {text = "Apache 2.0"}
authors = [
    { name = "Pals Chinnakannan", email = "palsc@berkeley.edu" },
]
dependencies = [
    "boto3>=1.34",
    "rich",
    "openai",
    "typing-extensions",
    "fastapi>=0.110.0",
    "pydantic>=2.11.5",
    "uvicorn>=0.29",
    "langchain-core>=0.1.50",
    "pydantic>=2.6",
    "uuid",
    "mangum>=0.19.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["black", "pre-commit"]
test = ["pytest", "coverage"]
docs = ["sphinx", "mkdocs"]

[tool.pdm]
distribution = true
package-dir = {"" = "src"}